Fix display on mobile

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -18,8 +18,6 @@
 }
 
 #block_search p#showing {
-	float:right;
-	margin:21px 0 0 0;
 	font-size: 12px;
 	font-weight: bold;
 }
@@ -296,7 +294,19 @@
 
     #block_search #resultsNav.fixed {
         position: fixed;
-        top:35px;
+        top: 60px;
+        width: calc(25% - 24px)
     }
 
+    #block_search p#showing {
+        float:right;
+        margin:21px 0 0 0;
+    }
+
+}
+
+@media (max-width: 767px) {
+    #resultsNav {
+        width:auto !important;
+    }
 }
